--- a/VOTING-APP/postgres-pod.yaml
+++ b/VOTING-APP/postgres-pod.yaml
@@ -13,8 +13,8 @@ spec:
         - containerPort: 5432
       env:
         - name: POSTGRES_USER
-          value: postgres
+          value: "postgres"
         - name: POSTGRES_PASSWORD
-          value: postgres
+          value: "postgres"
         - name: POSTGRES_HOST_AUTH_METHOD
           value: trust
